# buddy-alloc

./: .gitignore  Cargo.toml  MIT-LICENSE.txt  Makefile  README.md
.github/workflows/: rust.yml
benches/: alloc.rs  buddy_alloc.rs
examples/: non_threadsafe_demo.rs  non_threadsafe_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: chaos.rs
src/: buddy_alloc.rs  fast_alloc.rs  freelist_alloc.rs  lib.rs  non_threadsafe_alloc.rs  wrapped_alloc.rs
src/tests/: buddy_alloc.rs  fast_alloc.rs  freelist_alloc.rs  mod.rs
