[package]
name = "buddy-alloc"
version = "0.1.1"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jjyr/buddy-alloc"
description = "Buddy-alloc is a Rust implemented allocator, used for embedded environments."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "alloc"
harness = false
