[package]
name = "buddy-alloc"
version = "0.5.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/jjyr/buddy-alloc"
description = "Buddy-alloc is a memory allocator for no-std Rust, used for embedded environments."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "buddy_alloc"
harness = false
