[package]
name = "buddy-alloc"
version = "0.5.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jjyr/buddy-alloc"
description = "Buddy-alloc is a memory allocator for no-std Rust, used for embedded environments."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
rustc-dep-of-std = ["core", "compiler_builtins/rustc-dep-of-std"]

[dependencies]
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.0", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "buddy_alloc"
harness = false
